[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ytx"
version = "0.1.0"
description = "A modern wrapper around yt-dlp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
]

[project.scripts]
ytx = "ytx.cli:app"